# camembert

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  README.md
.github/: release.yaml
.github/workflows/: quality.yaml  release.yaml
camembert/: Cargo.toml  build.rs
camembert-core/: Cargo.toml
camembert-core/src/: delete.rs  diff.rs  dump.rs  flat.rs  freeable.rs  lib.rs  ncdu.rs  query.rs  scan.rs  size.rs  tree.rs  view.rs
camembert-core/src/dump/: container.rs  encode.rs  read.rs
camembert-core/src/scan/: hardlink.rs  media.rs  message.rs  owner.rs  uring.rs  worker.rs
camembert-core/src/tree/: interner.rs
camembert-core/tests/: delete.rs  dump.rs  flat_agreement.rs  scan.rs  statx_engine.rs  view_live.rs
camembert/src/: config.rs  main.rs  ui.rs
camembert/src/ui/: anim.rs  caps.rs  filterview.rs  flatview.rs  fmt.rs  freeable_panel.rs  history.rs  keymap.rs  osc11.rs  palette.rs  state.rs  theme.rs  toast.rs  wheel.rs
camembert/tests/: cli.rs
docs/design/: dump-format-attack-a.md  dump-format-attack-b.md  dump-format-attack-c.md  dump-format-decisions.md  dump-format-option-a-jsonl.md  dump-format-option-b-camb1.md  dump-format-option-c-sqlite.md  dump-format-options.md  dump-format-research.md  flat-view-attack.md  flat-view-decisions.md  flat-view-options.md  freeable-attack-a.md  freeable-attack-b.md  freeable-attack-c.md  freeable-decisions.md  freeable-option-a-ledger.md  freeable-option-b-annotated.md  freeable-option-c-ghosts.md  freeable-options.md  freeable-research.md  freeable2-attack-a.md  freeable2-attack-b.md  freeable2-attack-c.md  freeable2-decisions.md  freeable2-option-a-selection-oracle.md  freeable2-option-b-eager-floor.md  freeable2-option-c-viewport-trickle.md  freeable2-options.md  freeable2-research.md  handoff-original.md  query-attack-a.md  query-attack-b.md  query-attack-c.md  query-decisions.md  query-option-a-live-qualifiers.md  query-option-b-expression-apply.md  query-option-c-split-surfaces.md  query-options.md  query-research.md  (+10 more)
docs/format/: dump-v1.md
scripts/: bench-compare.sh
