[workspace]
resolver = "3"
members = [
    "camembert-core",
    "camembert",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
camembert-core = { path = "camembert-core" }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
ratatui = "0.30"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
