[package]
name = "camembert-core"
description = "Core scanning and aggregation library for camembert"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel = "0.5.16"
crossbeam-deque = "0.8.7"
hashbrown = "0.17.1"
rustc-hash = "2.1.3"
rustix = { version = "1.1.4", features = ["fs"] }
thiserror = "2.0.19"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
