[package]
name = "camembert"
description = "Disk usage analyzer that answers the real questions: what grew, what is freeable, what is cold"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
camembert-core = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
rustix = { version = "1.1.4", features = ["fs", "termios"] }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3.27.0"
